# fem

./: .gitignore  .xtensor_backend.cpp.swp  CG.py  CTuto  CTuto.c  Comparison Fixed vs Updated Hook.ods  Comparisons different KTs slide and deepInd.ods  ContactPotato.py  ContactPotato_ctct0_gn.csv  ContactPotato_ctct0_gt.csv  ContactPotato_ctct0_kn.csv  ContactPotato_dispSlave.csv  ContactPotato_fint.csv  CubeSlide.py  Fy Pushing Down on Rigid.ods  GifGenerator.py  Indentation50deep.py  Key_new_GitLab  Key_new_GitLab.pub  LinAlgFuncs.py  Optimization.py  README.md  SimplifiedDependency.py  SingleDeepIndentSlide.py  SingleDeepIndentSlide_ctct0_gn.csv  SingleDeepIndentSlide_ctct0_gt.csv  SingleDeepIndentSlide_ctct0_kn.csv  SingleDeepIndentSlide_dispSlave.csv  SingleDeepIndentSlide_fint.csv  SingleElement.py  SingleElement_ctct0_gn.csv  SingleElement_ctct0_gt.csv  SingleElement_ctct0_kn.csv  SingleElement_dispSlave.csv  SingleElement_fint.csv  environment.yml  excelwriter.py  excelwriter2.py  fem-env.yml  how --name-only HEAD~1  (+7 more)
1_Minimization_solvers/: .gitignore  .~lock.COUNTERS_Results.ods#  Brents_GPT.py  COUNTERS_Results.ods  ContactPotato_Ex1.py  ContactPotato_Ex2.py  ContactPotato_Ex3.py  MultiLauncher.sh  POST.py  TR_contours.py  pseudo2d.py  pseudo2d_TETS.py  pseudo2d_pairs_numbering
2D Simple Optimization contact/: nestedOldOptimization.py
2_Accelerated_Contact_Detection/: ANN_Diego_classif_regression_FC.ipynb  A_TIMERS.ods  BillionPoints.py  CLASSIF_REGRESS_128_512_FC_256_20EPOCHS.keras  CSV_organizers.py  Cherokee_bright_grid.eps  ContactData  (+16 more)
Accelerated_new/thesis_sourcecode/: main.py  pyproject.toml
Accelerated_new/thesis_sourcecode/scripts/: clear_all_generated_data.bash
Accelerated_new/thesis_sourcecode/scripts/hpc_scripts/final_patch_models_scripts/: final_patch_model_shape_512_512.bash
Accelerated_new/thesis_sourcecode/scripts/hpc_scripts/final_sp_models_scripts/: sp_patch2.bash  sp_patch25.bash  sp_patch26.bash  sp_patch38.bash  sp_patch40.bash  sp_patch48.bash  sp_patch76.bash  sp_patch8.bash
Accelerated_new/thesis_sourcecode/scripts/hpc_scripts/surface_points_models_experiment/: script22.bash  script32.bash  script34.bash
Accelerated_new/thesis_sourcecode/src/model_training/saved_models/: final_surface_points_model_patch_0-shape-512-512-bs-64.keras  final_surface_points_model_patch_20-shape-512-512-bs-64.keras  final_surface_points_model_patch_28-shape-512-512-bs-64.keras  final_surface_points_model_patch_38-shape-512-512-bs-64.keras  final_surface_points_model_patch_60-shape-512-512-bs-64.keras  final_surface_points_model_patch_63-shape-512-512-bs-64.keras  final_surface_points_model_patch_65-shape-512-512-bs-64.keras  final_surface_points_model_patch_70-shape-512-512-bs-64.keras  final_surface_points_model_patch_71-shape-512-512-bs-64.keras  final_surface_points_model_patch_73-shape-512-512-bs-64.keras  final_surface_points_model_patch_79-shape-512-512-bs-64.keras  final_surface_points_model_patch_88-shape-512-512-bs-64.keras  final_surface_points_model_patch_9-shape-512-512-bs-64.keras  patch_model-shape-25-25-25-25-bs-64.keras  patch_model-shape-50-50-50-50-50-50-50-50-bs-64.keras  patch_model-shape-80-80-80-80-bs-64.keras  patch_model_rand_sample_0.1-shape-10-10-10-10-10-10-10-10-10-10-10-10-bs-64.keras  patch_model_rand_sample_0.1-shape-128-128-bs-64.keras  patch_model_rand_sample_0.1-shape-25-25-25-25-25-25-25-25-25-25-25-25-25-25-25-25-bs-64.keras  patch_model_rand_sample_0.1-shape-50-50-50-50-50-50-50-50-50-50-50-50-50-50-50-50-bs-64.keras  patch_model_rand_sample_0.1-shape-80-80-80-80-80-80-80-80-80-80-80-80-80-80-80-80-bs-64.keras
(+2528 files in other folders)
