[build-system]
requires = ["setuptools>=65.0", "wheel", "pybind11>=2.13.0", "numpy>=1.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fem-contact-mechanics"
version = "0.1.0"
description = "Finite Element Method for Contact Mechanics with ML Acceleration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FEM Contact Mechanics Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.26.0,<1.27.0",
    "scipy>=1.14.0,<1.15.0",
    "numba>=0.60.0,<0.61.0",
    "h5py>=3.12.0,<3.13.0",
    "meshio>=5.3.0,<5.4.0",
    "joblib>=1.4.0,<1.5.0",
    "rich>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.17.0,<2.18.0",
    "keras>=3.6.0,<3.7.0",
    "tensorboard>=2.17.0,<2.18.0",
]
viz = [
    "matplotlib>=3.9.0,<3.10.0",
    "PyQt5>=5.15.0,<5.16.0",
    "Pillow>=10.4.0,<11.0.0",
]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.8.0,<2.0.0",
    "isort>=5.13.0,<6.0.0",
    "ipython>=8.18.0,<9.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]
all = [
    "fem-contact-mechanics[ml,viz,dev]",
]

[tool.setuptools]
packages = ["PyClasses"]
include-package-data = true

[tool.setuptools.package-data]
PyClasses = ["*.pyi", "py.typed"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | Meshes
  | Other_work
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"