
[project]
name = "by-mtsc-unilu"
dynamic = ["version"]
authors = [
    {name = "Boghos Youseef", email = "boghos.youseef.001@student.uni.lu"}
]

description = "The source code for my master thesis titled 'Machine learning for surface classification and surface parameter estimation to accelerate finite element simulations with unilateral contact'"
readme = "README.md"
requires-python = ">=3.9.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Windows",
    "Intended Audience :: Science/Research"
]


[build-system]
requires = ["setuptools"]

[project.scripts]
by-mtsc-unilu = "entry_point:main"


[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/BoghosYouseef/thesis_sourcecode.git"
Documentation = "https://github.com/BoghosYouseef/thesis_sourcecode/blob/master/README.md"
# Issues = "https://github.com/BoghosYouseef/thesis_sourcecode/issues"
